--- a/src/css/global.css
+++ b/src/css/global.css
@@ -5,6 +5,7 @@
 @import './components/componentNewPost.css';
 @import './components/componentPreview.css';
 @import './components/componentHelp.css';
+@import './components/componentCreateGroup.css';
 
 :root {
   --primary-color: #42b983;
