--- a/src/partials/components/componentCreate.hbs
+++ b/src/partials/components/componentCreate.hbs
@@ -200,7 +200,7 @@
             <input type="text" class="modal__input" placeholder="@channel" data-channel-input>
             <img src="/icons/chevron.svg" class="modal__input-arrow" alt="Стрелка">
           </div>
-        </div>
+        </div>в
 
         <div class="modal__buttons">
           <button class="modal__button modal__button--cancel" data-modal-close>Отмена</button>
