--- a/src/partials/components/componentEditGroup.hbs
+++ b/src/partials/components/componentEditGroup.hbs
@@ -1,13 +1,13 @@
 <section class="edit-group">
     <div class="edit-group__header">
-        <h3 class="edit-group__title">Редактировать группу</h3>
+        <h3 class="edit-group__title">Название группы</h3>
         <input class="edit-group__input" placeholder="Введите название" />
     </div>
 
     <div class="edit-group__content">
         <div class="edit-group__content-header">
             <div class="edit-group__content-header-title">
-                <h3 class="edit-group__content-header-title-text">Выбранные каналы</h3>
+                <h3 class="edit-group__content-header-title-text">Каналы в группе</h3>
                 <span class="edit-group__content-header-title-count">0</span>
             </div>
             <button class="edit-group__content-header-button">
@@ -37,7 +37,6 @@
     </div>
 
     <button class="edit-group__button">
-        <img class="edit-group__button-icon" src="/icons/save.svg" alt="Сохранить" />
-        <span>Сохранить изменения</span>
+        <span>Сохранить</span>
     </button>
 </section>
