--- a/src/css/components/componentEditGroup.css
+++ b/src/css/components/componentEditGroup.css
@@ -198,7 +198,6 @@
     line-height: 26px;
     letter-spacing: 0.1px;
     white-space: nowrap;
-    min-width: 225px;
     background: #0F0F0F;
     border-radius: 100px;
     color: white;
@@ -207,6 +206,7 @@
     cursor: pointer;
     gap: 16px;
     align-items: center;
+    padding: 17px 32px;
 }
 
 .edit-group__button-icon {
