--- a/src/css/components/componentCreate.css
+++ b/src/css/components/componentCreate.css
@@ -21,6 +21,7 @@
 .create-wrapper {
   padding: 16px;
   padding-bottom: 123px; /* Отступ для кнопки "Показать/Скрыть" */
+  background-color: black;
 }
 
 .create-card-wrapper {
@@ -82,6 +83,7 @@
   padding-inline: 16px;
   padding-top: 10px;
   padding-bottom: 13px;
+  border-radius: 16px 0 0 0;
   background: rgba(255, 255, 255, 1);
 }
 
@@ -186,6 +188,10 @@ letter-spacing: 0px;
   border: none;
   padding: 8px;
   z-index: 1;
+}
+
+.create-card-wrapper__header {
+  display: flex;
 }
 
 .modal__step {
@@ -1221,6 +1227,22 @@ padding: 4px;
 .multi-select .card-select-checkbox,
 .multi-select .group-select-checkbox {
   display: block;
+}
+
+/* Добавляем стили для header'а групп */
+.create-card-wrapper__header-group {
+  display: flex;
+}
+
+.create-card__header-group {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding-inline: 16px;
+  padding-top: 10px;
+  padding-bottom: 13px;
+  border-radius: 16px 0 0 0;
+  background: rgba(255, 255, 255, 1);
 }
 
 
