--- a/src/partials/components/componentCreate.hbs
+++ b/src/partials/components/componentCreate.hbs
@@ -111,7 +111,7 @@
             <div class='create-card__header'>
               <h4 class='create-card__title'>Группы</h4>
               <div class='create-card__counter'>{{groups.length}}</div>
-              <img class='create-card__add' src='/icons/plusnew.svg' alt='Add' />
+              <a href="/create-group"><img class='create-card__add' src='/icons/plusnew.svg' alt='Add' /></a>
             </div>
             <img class='create-card__add-icon' src='/images/create/graph.png' alt='graph' />
           </div>
@@ -204,7 +204,7 @@
             <input type="text" class="modal__input" placeholder="@channel" data-channel-input>
             <img src="/icons/chevron.svg" class="modal__input-arrow" alt="Стрелка">
           </div>
-        </div>в
+        </div>
 
         <div class="modal__buttons">
           <button class="modal__button modal__button--cancel" data-modal-close>Отмена</button>
