--- a/src/partials/components/componentCreate.hbs
+++ b/src/partials/components/componentCreate.hbs
@@ -183,13 +183,16 @@
   </div>
 
   <div class="modal" data-modal>
-    <div class="modal__content">
-      <div class="modal__header">
-        <h2 class="modal__title">Добавить канал</h2>
+          <div class="modal__header">
+        <div class="modal__header-wrapper">
+          <h2 class="modal__title">Добавить канал</h2>
+          <img src="/images/create/graph.png" alt="graph"/>
+          </div>
         <button class="modal__close" data-modal-close>
-          <img src="/icons/close.svg" alt="Закрыть">
+          <img src="/icons/closemodal.svg" alt="Закрыть">
         </button>
       </div>
+    <div class="modal__content">
       
       <div class="modal__body">
         <div class="modal__step">
