--- a/src/partials/components/componentHome.hbs
+++ b/src/partials/components/componentHome.hbs
@@ -13,10 +13,10 @@
         <div class='search-input-wrapper'>
           <div class='search-input-container'>
             <div class='search-tags'></div>
+            <div class="search-placeholder" data-search-placeholder>Выберите каналы</div>
             <input 
               type='text' 
               class='search-input' 
-              placeholder='Выберите каналы'
               data-search-input
             >
             <img 
