--- a/src/css/components/componentCreate.css
+++ b/src/css/components/componentCreate.css
@@ -140,7 +140,7 @@ letter-spacing: 0px;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.7) !important;
   display: none;
   padding: 30px 16px 74px;
   z-index: 1000;
@@ -148,6 +148,7 @@ letter-spacing: 0px;
   overflow-y: auto;
   justify-content: space-between;
   flex-direction: column;
+  align-items: start !important;
 }
 
 .modal.active {
@@ -157,7 +158,7 @@ letter-spacing: 0px;
 .modal__content {
   width: 100%;
   background: #fff;
-  border-radius: 12px;
+  border-radius: 0px 16px 16px 16px;
   padding: 16px;
   position: relative;
   overflow: hidden;
@@ -169,7 +170,7 @@ letter-spacing: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 24px;
+  width: 100%;
 }
 
 .modal__title {
@@ -177,16 +178,19 @@ letter-spacing: 0px;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 0px;  
+  padding: 10px 16px 14px;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 16px 0 0 0;
 }
 
 .modal__close {
-  position: absolute;
-  top: -4px;
-  right: -4px;
   background: none;
   border: none;
-  padding: 8px;
   z-index: 1;
+}
+
+.modal__header-wrapper {
+  display: flex;
 }
 
 .create-card-wrapper__header {
@@ -981,7 +985,7 @@ padding: 4px;
 .modal__header-wrapper {
   display: flex;
   align-items: center;
-  gap: 6px;
+  justify-content: space-between;
 }
 
 .modal__counter {
